--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@types/react-modal": "^3.16.3",
+    "@types/react-world-flags": "^1.6.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
