--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.9.2",
     "chart.js": "^4.4.8",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "mammoth": "^1.9.0",
     "mathjs": "^14.4.0",
